2009-08-04: version 0.0.4

	* fixed spawn exec behavior.
	* fixed redirection when URL include '..'.
	* removed unicode things. it didn't work for a long time.
	* fixed problem that query-string does not post when POST.
	* removed tricky treatment for CGI arguments.
	* fixed Makefile.mvc to support vc6.
	* fixed few compier warnings.

2009-08-03: version 0.0.3

	* fixed bug that set broken directory for spawn exec.

2009-08-02: version 0.0.2

	* fixed bug that couldn't treat PATH_INFO when using spawn exec.

2009-08-01: version 0.0.1

	* first release.
